<resources>
    <string name="app_name">Electrostimulator</string>
    <string name="unnamed_device">Безымянное устройство</string>
    <string name="name">Электростимулятор</string>
    <string name="label_exploration_mode">Исследовательский \nрежим</string>
    <string name="frequency">Частота, Гц</string>
    <string name="duration">Длительность, МКС</string>
    <string name="reset_button">Заводские настройки</string>
    <string name="apply_button">ОК</string>
    <string name="back_button">Кнопка перехода на прошлый экран</string>
    <string name="frequency_arrow_up">Кнопка увеличения частоты на 1</string>
    <string name="duration_arrow_down">Кнопка уменьшения продолжительности на 1</string>
    <string name="duration_arrow_up">Кнопка увеличения продолжительности на 1</string>
    <string name="frequency_arrow_down">Кнопка уменьшения частоты на 1</string>
    <string name="bluetooth_device_icon">Иконка Bluetooth устройства</string>
    <string name="search_button">Кнопка поиска устройств</string>
    <string name="_0">0</string>
    <string name="app_icon">App icon</string>
</resources>