<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/app_icon"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <View
        android:id="@+id/connectionStateDot"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:background="@drawable/background_red_dot"
        app:layout_constraintBottom_toBottomOf="@+id/appIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appIcon" />

    <TextView
        android:id="@+id/frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/duration"
        app:layout_constraintStart_toStartOf="@+id/duration"
        app:layout_constraintTop_toBottomOf="@+id/appIcon"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/frequencyValue"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/frequency"
        app:layout_constraintEnd_toStartOf="@+id/frequencyArrowDown"
        app:layout_constraintTop_toTopOf="@+id/frequency"
        tools:text="20" />

    <ImageView
        android:id="@+id/frequencyArrowUp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/frequency_arrow_up"
        android:src="@drawable/ic_up_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/barrier1"
        app:layout_constraintEnd_toEndOf="@+id/frequencyArrowDown"
        app:layout_constraintStart_toStartOf="@+id/frequencyArrowDown"
        app:layout_constraintTop_toTopOf="@+id/barrier1" />

    <ImageView
        android:id="@+id/durationArrowDown"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/duration_arrow_down"
        android:src="@drawable/ic_down_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/barrier4"
        app:layout_constraintEnd_toEndOf="@+id/durationArrowUp"
        app:layout_constraintStart_toStartOf="@+id/durationArrowUp"
        app:layout_constraintTop_toTopOf="@+id/barrier4" />

    <EditText
        android:id="@+id/durationValue"
        android:layout_width="72dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:hint="@string/_0"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/duration"
        app:layout_constraintEnd_toStartOf="@+id/durationArrowUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/duration"
        app:layout_constraintTop_toTopOf="@+id/duration"
        tools:text="200" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/duration"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/mode"
        app:layout_constraintEnd_toStartOf="@+id/durationValue"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frequency" />

    <ImageView
        android:id="@+id/durationArrowUp"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/duration_arrow_up"
        android:src="@drawable/ic_up_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/barrier3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/durationValue"
        app:layout_constraintTop_toTopOf="@+id/barrier3" />

    <ImageView
        android:id="@+id/frequencyArrowDown"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/frequency_arrow_down"
        android:src="@drawable/ic_down_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/barrier2"
        app:layout_constraintEnd_toEndOf="@+id/durationArrowUp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/durationArrowUp"
        app:layout_constraintTop_toTopOf="@+id/barrier2" />

    <TextView
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/label_exploration_mode"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintStart_toStartOf="@+id/duration"
        app:layout_constraintTop_toBottomOf="@+id/duration" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/modeSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/mode"
        app:layout_constraintEnd_toEndOf="@+id/durationArrowDown"
        app:layout_constraintStart_toStartOf="@+id/durationArrowDown"
        app:layout_constraintTop_toTopOf="@+id/mode"
        app:thumbTint="@color/black"
        app:trackTint="@color/switch_track_color" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/reset_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_gray"
        android:text="@string/apply_button"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="frequencyValue" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="durationValue" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="durationValue" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="frequencyValue" />

</androidx.constraintlayout.widget.ConstraintLayout>